<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cvFoto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/background_circle"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:src="@drawable/kanto"
                android:padding="3dp" />

            <Button
                android:id="@+id/btnProfile"
                style="@style/Text_Button_Centrado"
                android:layout_width="135dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@drawable/background_transparent"
                android:layout_margin="5dp"
                android:text="@string/change_foto"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:tooltipText="Name"
                        android:textColorHint="@color/colorWhite"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/etName"
                            style="@style/TextView_EditText_Normal"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:textColor="@color/colorWhite"
                            android:imeOptions="actionNext"
                            android:lines="1"
                            android:hint="@string/name" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:tooltipText="Name"
                        android:textColorHint="@color/colorWhite"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/etUserName"
                            style="@style/TextView_EditText_Normal"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:textColor="@color/colorWhite"
                            android:imeOptions="actionNext"
                            android:lines="1"
                            android:hint="@string/user_name" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:tooltipText="Name"
                        android:textColorHint="@color/colorWhite"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/etBiography"
                            style="@style/TextView_EditText_Normal"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:textColor="@color/colorWhite"
                            android:imeOptions="actionNext"
                            android:lines="1"
                            android:hint="@string/biography" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
