<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <include layout="@layout/content" />


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:background="@drawable/background_tolbar"
        android:layout_height="350dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="top"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_tolbar"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/cvFoto"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/background_circle"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/kanto"
                    android:padding="3dp" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:text="TESTING"/>

                <TextView
                    android:id="@+id/tvUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:text="TESTING"/>

                <TextView
                    android:id="@+id/tvBiography"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:text="TESTING"/>

                <Button
                    android:id="@+id/btnProfile"
                    style="@style/Text_Button_Centrado"
                    android:layout_width="135dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:background="@drawable/background_button"
                    android:text="@string/edit_profile"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/background_transparent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:padding="7dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/tvFollowers"
                            style="@style/TextView_EditText_Centrado"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textSize="19sp"/>
                        <TextView
                            style="@style/TextView_EditText_Centrado"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/followers"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/tvFollowed"
                            style="@style/TextView_EditText_Centrado"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textSize="19sp"/>
                        <TextView
                            style="@style/TextView_EditText_Centrado"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/followed"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/tvViews"
                            style="@style/TextView_EditText_Centrado"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textSize="19sp"/>
                        <TextView
                            style="@style/TextView_EditText_Centrado"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/views"/>
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:ellipsize="end"
                    android:layout_gravity="center"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_gear"/>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>